--- a/notebooks/interactive_analisys.ipynb
+++ b/notebooks/interactive_analisys.ipynb
@@ -516,7 +516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark 3",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -530,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
